--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 22px !important;
+  margin: 18px 0 !important;
+}
+
+h3 {
+  font-size: 18.5px !important;
 }
 
 p, small, ul, li {
   font-family: 'Source Sans Pro';
-  font-size: 18px;
+  font-size: 18px !important;
   color: #5a5a5a;
 }
 
