--- a/css/style.scss
+++ b/css/style.scss
@@ -58,12 +58,12 @@ h1, h2, h3, h4, h5, h6 {
     color: $colorGeneral
 }
 
-h2 {
+h2.__h2 {
     font-size: 22px!important;
     margin: 18px 0!important;
 }
 
-h3 {
+h3.__h3 {
     font-size: 18.5px!important;
 }
 
