--- a/css/style.scss
+++ b/css/style.scss
@@ -53,17 +53,17 @@ FUENTES
 ESTILOS GENERALES
 ============================================ */
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .__h2, .__h3 {
     font-family: 'Poppins';
-    color: $colorGeneral
+    color: $colorGeneral;
 }
 
-h2.__h2 {
+.__h2 {
     font-size: 22px!important;
     margin: 18px 0!important;
 }
 
-h3.__h3 {
+.__h3 {
     font-size: 18.5px!important;
 }
 
