--- a/css/style.scss
+++ b/css/style.scss
@@ -55,6 +55,7 @@ ESTILOS GENERALES
 
 h1, h2, h3, h4, h5, h6, .__h2, .__h3 {
     font-family: 'Poppins';
+    font-weight: bold;
     color: $colorGeneral;
 }
 
