--- a/css/style.scss
+++ b/css/style.scss
@@ -204,7 +204,7 @@ SECCIÓN DOS COLUMNAS
     justify-content: space-between;
 
     .__h2 {
-        width: 100%;
+        display: block;
     }
     .__columna {
         width: 47%;
