--- a/css/style.scss
+++ b/css/style.scss
@@ -78,6 +78,12 @@ p, small, ul, li {
     color: $colorGeneral
 }
 
+ul {
+    li {
+        margin-bottom: 5px;
+    }
+}
+
 /* ============================================
 TITULOS CON EMOJI :)
 http://www.unicode.org/emoji/charts/full-emoji-list.html
@@ -124,6 +130,10 @@ SECCIÓN TARJETAS PROFES
         border: 1px solid #E6E6E6;
         border-radius: 7px;
         transition: all 0.25s ease-in-out;
+
+        & + .__wrapper-tarjeta {
+            margin-top: 25px;
+        }
 
         img {
             border-radius: 7px 0 0 7px;
