--- a/css/style.css
+++ b/css/style.css
@@ -15,37 +15,37 @@ FUENTES
 /* ============================================
 ESTILOS GENERALES
 ============================================ */
-h1, h2, h3, h4, h5, h6, .__h2, .__h3 {
+.courtyard h1, .courtyard h2, .courtyard h3, .courtyard h4, .courtyard h5, .courtyard h6, .courtyard .__h2, .courtyard .__h3 {
   font-family: 'Poppins';
   color: #5a5a5a;
 }
 
-.__h2 {
+.courtyard .__h2 {
   font-weight: bold;
   font-size: 22px !important;
   margin: 19px 0 !important;
 }
 
-.__h3 {
+.courtyard .__h3 {
   font-size: 18.5px !important;
 }
 
-p {
+.courtyard p {
   margin-bottom: 18px !important;
 }
 
-p, small, ul, li {
+.courtyard p, .courtyard small, .courtyard ul, .courtyard li {
   font-family: 'Source Sans Pro';
   font-size: 16.5px !important;
   line-height: 1.4em;
   color: #5a5a5a;
 }
 
-ul li {
+.courtyard ul li {
   margin-bottom: 5px;
 }
 
-[class^="__seccion"] {
+.courtyard [class^="__seccion"] {
   margin-bottom: 20px;
 }
 
@@ -53,101 +53,101 @@ ul li {
 TITULOS CON EMOJI :)
 http://www.unicode.org/emoji/charts/full-emoji-list.html
 ============================================ */
-.__h2.__emoji.__fire {
+.courtyard .__h2.__emoji.__fire {
   color: orange;
 }
 
-.__h2.__emoji.__fire::before {
+.courtyard .__h2.__emoji.__fire::before {
   margin-right: 5px;
   content: "🔥";
 }
 
-.__h2.__emoji.__movie-camera {
+.courtyard .__h2.__emoji.__movie-camera {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__movie-camera::before {
+.courtyard .__h2.__emoji.__movie-camera::before {
   margin-right: 5px;
   content: "🎬";
 }
 
-.__h2.__emoji.__rocket {
+.courtyard .__h2.__emoji.__rocket {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__rocket::before {
+.courtyard .__h2.__emoji.__rocket::before {
   margin-right: 5px;
   content: "🚀";
 }
 
-.__h2.__emoji.__pushpin {
+.courtyard .__h2.__emoji.__pushpin {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__pushpin::before {
+.courtyard .__h2.__emoji.__pushpin::before {
   margin-right: 5px;
   content: "📌";
 }
 
-.__h2.__emoji.__clapper-board {
+.courtyard .__h2.__emoji.__clapper-board {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__clapper-board::before {
+.courtyard .__h2.__emoji.__clapper-board::before {
   margin-right: 5px;
   content: "🎬";
 }
 
-.__h2.__emoji.__laptop {
+.courtyard .__h2.__emoji.__laptop {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__laptop::before {
+.courtyard .__h2.__emoji.__laptop::before {
   margin-right: 5px;
   content: "💻";
 }
 
-.__h2.__emoji.__light-bulb {
+.courtyard .__h2.__emoji.__light-bulb {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__light-bulb::before {
+.courtyard .__h2.__emoji.__light-bulb::before {
   margin-right: 5px;
   content: "💡";
 }
 
-.__h2.__emoji.__compass {
+.courtyard .__h2.__emoji.__compass {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__compass::before {
+.courtyard .__h2.__emoji.__compass::before {
   margin-right: 5px;
   content: "🧭";
 }
 
-.__h2.__emoji.__last-track-button {
+.courtyard .__h2.__emoji.__last-track-button {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__last-track-button::before {
+.courtyard .__h2.__emoji.__last-track-button::before {
   margin-right: 5px;
   content: "⏮";
 }
 
-.__h2.__emoji.__thinking-face {
+.courtyard .__h2.__emoji.__thinking-face {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__thinking-face::before {
+.courtyard .__h2.__emoji.__thinking-face::before {
   margin-right: 5px;
   content: "🤔";
 }
 
-.__h2.__emoji.__thumbs-up {
+.courtyard .__h2.__emoji.__thumbs-up {
   color: #5a5a5a;
 }
 
-.__h2.__emoji.__thumbs-up::before {
+.courtyard .__h2.__emoji.__thumbs-up::before {
   margin-right: 5px;
   content: "👍";
 }
@@ -158,7 +158,7 @@ SECCIÓN CÓDIGO
     - Párrafo <p>
     - Bloque de código (.__wrapper-codigo)
 ============================================ */
-.__seccion-codigo .__wrapper-codigo {
+.courtyard .__seccion-codigo .__wrapper-codigo {
   min-height: 50px;
   padding: 10px;
   border-radius: 7px;
@@ -175,7 +175,7 @@ SECCIÓN TARJETAS PROFES
             - Bios <p> (desaparece en < 680px)
             - Mail <small>
 ============================================ */
-.__seccion-tarjetas .__wrapper-tarjeta {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -188,35 +188,35 @@ SECCIÓN TARJETAS PROFES
   transition: all 0.25s ease-in-out;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta + .__wrapper-tarjeta {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta + .__wrapper-tarjeta {
   margin-top: 25px;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta img {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta img {
   border-radius: 7px 0 0 7px;
   width: 30%;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta .__combo-texto {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta .__combo-texto {
   width: 70%;
   padding: 20px 30px;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta .__combo-texto .__h3 {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta .__combo-texto .__h3 {
   font-weight: normal;
   margin-top: 0;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta .__combo-texto p {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta .__combo-texto p {
   font-size: 16px;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta .__combo-texto small {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta .__combo-texto small {
   font-size: 16px;
   justify-self: flex-end;
 }
 
-.__seccion-tarjetas .__wrapper-tarjeta:hover {
+.courtyard .__seccion-tarjetas .__wrapper-tarjeta:hover {
   -webkit-transform: translateY(-5px);
           transform: translateY(-5px);
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.14), 0 6px 6px rgba(0, 0, 0, 0.18);
@@ -224,7 +224,7 @@ SECCIÓN TARJETAS PROFES
 }
 
 @media (max-width: 680px) {
-  .__seccion-tarjetas .__wrapper-tarjeta .__combo-texto p {
+  .courtyard .__seccion-tarjetas .__wrapper-tarjeta .__combo-texto p {
     display: none !important;
   }
 }
@@ -234,14 +234,14 @@ SECCIÓN LISTADO DE CHECKS
     - Lista desordenada <ul>
         - Items <li>
 ============================================ */
-.__seccion-check ul {
+.courtyard .__seccion-check ul {
   -webkit-padding-start: 30px;
           padding-inline-start: 30px;
   list-style-type: none;
   position: relative;
 }
 
-.__seccion-check ul li::before {
+.courtyard .__seccion-check ul li::before {
   content: '';
   position: absolute;
   width: 25px;
@@ -261,7 +261,7 @@ SECCIÓN DOS COLUMNAS
         - Título <h3>
         - Párrafo <p>
 ============================================ */
-.__seccion-dos-columnas {
+.courtyard .__seccion-dos-columnas {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -272,31 +272,31 @@ SECCIÓN DOS COLUMNAS
           justify-content: space-between;
 }
 
-.__seccion-dos-columnas .__h2 {
+.courtyard .__seccion-dos-columnas .__h2 {
   display: block;
   width: 100%;
 }
 
-.__seccion-dos-columnas .__d-block-100 {
+.courtyard .__seccion-dos-columnas .__d-block-100 {
   display: block;
   width: 100%;
 }
 
-.__seccion-dos-columnas .__columna {
+.courtyard .__seccion-dos-columnas .__columna {
   width: 47%;
 }
 
-.__seccion-dos-columnas .__columna .__h3 {
+.courtyard .__seccion-dos-columnas .__columna .__h3 {
   font-weight: normal;
   margin: 0;
 }
 
-.__seccion-dos-columnas .__columna p {
+.courtyard .__seccion-dos-columnas .__columna p {
   margin-top: 8px;
 }
 
 @media (max-width: 700px) {
-  .__seccion-dos-columnas .__columna {
+  .courtyard > .__seccion-dos-columnas .__columna {
     width: 100%;
   }
 }
@@ -304,7 +304,7 @@ SECCIÓN DOS COLUMNAS
 /* ============================================
 QUOTES
 ============================================ */
-.__quote {
+.courtyard .__quote {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -319,18 +319,18 @@ QUOTES
   margin-bottom: 25px;
 }
 
-.__quote p {
+.courtyard .__quote p {
   width: 85%;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
 }
 
-.__quote.__alerta {
+.courtyard .__quote.__alerta {
   background-color: red;
 }
 
-.__quote.__alerta::before {
+.courtyard .__quote.__alerta::before {
   content: '';
   opacity: .5;
   display: block;
@@ -342,11 +342,11 @@ QUOTES
   background-repeat: no-repeat;
 }
 
-.__quote.__ok {
+.courtyard .__quote.__ok {
   background-color: green;
 }
 
-.__quote.__ok::before {
+.courtyard .__quote.__ok::before {
   content: '';
   opacity: .5;
   display: block;
@@ -358,11 +358,11 @@ QUOTES
   background-repeat: no-repeat;
 }
 
-.__quote.__cita {
+.courtyard .__quote.__cita {
   background-color: blueviolet;
 }
 
-.__quote.__cita::before {
+.courtyard .__quote.__cita::before {
   content: '';
   opacity: .5;
   display: block;
@@ -374,11 +374,11 @@ QUOTES
   background-repeat: no-repeat;
 }
 
-.__quote.__info {
+.courtyard .__quote.__info {
   background-color: blue;
 }
 
-.__quote.__info::before {
+.courtyard .__quote.__info::before {
   content: '';
   opacity: .5;
   display: block;
@@ -391,7 +391,7 @@ QUOTES
 }
 
 @media (max-width: 550px) {
-  .__quote {
+  .courtyard .__quote {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
@@ -400,7 +400,7 @@ QUOTES
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .__quote p {
+  .courtyard .__quote p {
     margin-bottom: 0;
   }
 }
